newer version of Redis timeseries no longer supports -1 time stamp

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: "redislabs/redismod:latest"
     ports:
       - "6379:6379"
-  datastore:
-    image: "maguec/adgears:0.3.0"
+  application:
+    image: "maguec/adgears:0.4.0"
     links:
       - "redis:redis"
     ports:
@@ -15,10 +15,3 @@ services:
     environment:
         - REDIS_SERVER=redis
         - REDIS_PORT=6379
-  insight:
-    image: "redislabs/redisinsight:1.8.1"
-    depends_on:
-      - redis
-      - datastore
-    ports:
-      - "8001:8001"
