--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 click==7.1.1
+cloudpickle==1.6.0
 dominate==2.5.1
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
 flask-nav==0.6
+gearsclient @ git+https://github.com/RedisGears/redisgears-py.git@56ce9fe613ee2f4da7c38b6ce06d02cff74bb57c
 hiredis==1.0.1
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -11,7 +13,6 @@ redis==3.5.3
 redisbloom==0.4.0
 redistimeseries==1.4.3
 rmtest==0.7.0
-six==1.14.0
+six==1.16.0
 visitor==0.1.3
 Werkzeug==1.0.0
-git+https://github.com/RedisGears/redisgears-py.git
